--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "node-js-getting-started",
-  "version": "1.0.0",
+  "name": "bbchan-cloud",
+  "version": "0.1.0",
   "private": true,
   "description": "A sample Node.js app using Express",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js -- "
+    "start": "LEANCLOUD_APP_ID=F0wCNWUUMxcrBqeSvYnMzRoU-gzGzoHsz LEANCLOUD_APP_KEY=oMH7K3IbnN0igjEI99i8o57F node server.js",
+    "dev": "LEANCLOUD_APP_ID=F0wCNWUUMxcrBqeSvYnMzRoU-gzGzoHsz LEANCLOUD_APP_KEY=oMH7K3IbnN0igjEI99i8o57F nodemon server.js -- "
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -21,6 +21,6 @@
     "nodemon": "^1.18.7"
   },
   "engines": {
-    "node": "12.x"
+    "node": "14.x"
   }
 }
